GetResourceDirectory gets the Path by classloader and should work in jar now